# aoc21

./: Cargo.toml
benches/: aoc-bench.rs
input/: 01.out  02.out  03.out
src/: aoc01.rs  aoc02.rs  aoc03.rs  lib.rs  main.rs
