[package]
name = "aoc21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "aoc-bench"
harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
